--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "theme-ui": "^0.3.1"
+    "theme-ui": "^0.3.1",
+    "typeface-open-sans": "^0.0.75"
   },
   "devDependencies": {
     "prettier": "2.0.5"
