--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "theme-ui": "^0.3.1",
+    "typeface-noto-serif": "^0.0.72",
     "typeface-open-sans": "^0.0.75"
   },
   "devDependencies": {
