--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,14 @@
 {
-  "arrowParens": "avoid",
   "semi": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "tabWidth": 2,
+  "overrides": [
+    {
+        "files": "*.css",
+        "options": {
+            "tabWidth": 4
+        }
+    }
+  ],
+  "trailingComma": "es5"
 }
